[project]
name = "jax_kinematics"
version = "0.1.0"
description = "Robot kinematics implemented in JAX"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = ["kinematics", "jax", "robotics", "ik", "fk"]

dependencies = [
    'jax>=0.4.13',
    'jaxlib>=0.4.13',
    'numpy>=1.24',
    'flax>=0.7.0',
    'lxml>=4.6.0',
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B"]  # E: pycodestyle, F: pyflakes, I: isort, B: bugbear
ignore = ["E203", "E501"]
exclude = ["__pycache__"]

[tool.ruff.format]
quote-style = "double"
preview = true
